<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.activity.RecipeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button"
                android:paddingStart="0dp"
                android:paddingTop="12dp"
                android:paddingEnd="24dp"
                android:paddingBottom="12dp"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/epilogue"
                android:gravity="center"
                android:textColor="@color/dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Delicious Spaghetti"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/head">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/recipeImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/recipe_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/recipe_preview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/BottomRoundedImageView" />

                <LinearLayout
                    android:id="@+id/firstInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipeImage">

                    <TextView
                        android:id="@+id/cookingTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/epilogue"
                        android:textColor="@color/dark"
                        android:textSize="18sp"
                        tools:text="Ready in 25 minutes" />

                    <TextView
                        android:id="@+id/servings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/epilogue"
                        android:gravity="end"
                        android:textColor="@color/dark"
                        android:textSize="18sp"
                        tools:text="Servings: 4" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/healthScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_shape_12_white"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/firstInfo">

                    <TextView
                        android:id="@+id/healthScoreText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/epilogue"
                        android:textColor="@color/dark"
                        android:textSize="14sp"
                        tools:text="HealthScore: 85%" />

                    <ImageView
                        android:id="@+id/healthScoreBar"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_marginTop="6dp"
                        android:contentDescription="@string/bar"
                        android:src="@drawable/rounded_shape_12" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/spoonacularScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_shape_12_white"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/healthScore">

                    <TextView
                        android:id="@+id/spoonacularScoreText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/epilogue"
                        android:textColor="@color/dark"
                        android:textSize="14sp"
                        tools:text="spoonacularScore: 90" />

                    <ImageView
                        android:id="@+id/spoonacularScoreBar"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_marginTop="6dp"
                        android:contentDescription="@string/bar"
                        android:src="@drawable/rounded_shape_12" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/mainInfo">

                <TextView
                    android:id="@+id/ingredientsHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/epilogue"
                    android:paddingTop="20dp"
                    android:paddingBottom="12dp"
                    android:text="@string/ingredients"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredientsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layout_constraintTop_toBottomOf="@+id/ingredientsHead" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>